# infinity-forge

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESULTS.md  pyproject.toml
artifacts/: sample_200.jsonl
scripts/: freeze_probes.py  measure_richness.py
src/infinity_forge/: __init__.py  canonical.py  cascade.py  cli.py  composer.py  forge.py  generator.py  inputs.py  novelty.py  probes.py  prompts.py  sandbox.py  seeds.py  signatures.py
tests/: test_canonical.py  test_cascade_basic.py  test_cascade_integration.py  test_cascade_rejection.py  test_cli.py  test_composer.py  test_forge_integration.py  test_generator.py  test_inputs.py  test_novelty.py  test_probes.py  test_prompts.py  test_sandbox_adversarial.py  test_sandbox_basic.py  test_seeds.py  test_signatures.py
