[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinity-forge"
version = "0.1.0"
description = "∞ Forge: a self-compounding verified Python function library"
requires-python = ">=3.12"
dependencies = [
    "radon>=6.0,<7.0",
    "transformers>=4.40,<5.0",
    "torch>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[project.scripts]
forge = "infinity_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 3
